networkpolicy/networkpolicy__basic_kafka_setup__ingress-apisix__internet__any__egress__ports__80-443__nr68__lines16.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-apisix--internet--any--egress--ports--80-443--nr68
  namespace: ingress-apisix
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80
